WIP: Replace wpa_supplicant with IWD
This removes the wpa_supplicant dependency and replaces IWD as the
wifi management daemon. The dbus package was required to use IWD
which was also added.

Several additions to the wlan container:
 - Bind /etc/sshd.passwd to /etc/passwd
 - Bind /etc/sshd.group to /etc/passwd
 - Create messagebus user/group

TODO:
 - Run DBus in its own container, and expose the socket for the wlan
   container. This would allow IWD to be controlled with iwctl from
   outside the wlan container.

--- a/dockerfiles/uos/dockerfiles/wlan/Dockerfile
+++ b/dockerfiles/uos/dockerfiles/wlan/Dockerfile
@@ -10,10 +10,13 @@ RUN apk add --no-cache \
     inotify-tools \
     tini \
     wireless-tools \
-    wpa_supplicant 
+    iwd \
+    dbus \
+    openresolv
 
 COPY init.sh /usr/local/bin/init.sh
-COPY wpa_supplicant.conf.template /opt/wpa_supplicant.conf.template
+COPY iwd.conf.template /opt/iwd.conf.template
+COPY iwd.main.template /opt/iwd.main.template
 
 WORKDIR /
 
